Fixed the info page overflow and image position

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -257,6 +257,8 @@ section {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+
+    overflow: hidden;
 }
 
 .top {
